--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,11 @@
 Revision history for module TeX::DVI.
 
+0.04 Sun Jun  1 13:28:41 MET DST 1997
+	Bug fix.
+
 0.03 Sun Feb 16 13:55:26 MET 1997
-	`TeX::DVI::word' no longer does the lig/kern expansion but
-	calls `Font::TFM::expand'.
+	TeX::DVI::word no longer does the lig/kern expansion but
+	calls Font::TFM::expand.
 
 	Little/big endian incompatibility fixed.
 
