--- a/Changes
+++ b/Changes
@@ -1,7 +1,14 @@
 
 Changes for TeX::DVI and TeX::DVI::Parse:
 
-0.05
+0.052 Thu Dec  3 14:45:27 MET 1998
+	Added binmode, suggested by Randy Kobes.
+
+0.051 Wed Aug 19 18:10:39 MET DST 1998
+	Fixed bug with pack "N" and non integer skips, spotted by
+	schinder@pobox.com/cpan-testers@perl.org.
+
+0.05 Tue Aug 18 19:07:04 MET DST 1998
 	The distribution now includes TeX::DVI and TeX::DVI::Parse.
 	Tests extended. Added close method.
 
@@ -23,7 +30,7 @@ Changes for TeX::DVI:
 
 Changes for TeX::DVI::Parse:
 
-0.02_01
+0.021
 	Bug in make_special fixed, patch by Petr Machacek.
 
 0.02 Thu Jul 17 19:53:45 MET DST 1997
