--- a/README
+++ b/README
@@ -14,9 +14,9 @@ Module TeX::DVI::Parse:
 	functions for elements found in the file.
 
 Module TeX::DVI::Print:
-	Example how to use Parse to print the content of DVI --
-	defines functions to print content of the DVI in readable
-	form.
+	Example how to use TeX::DVI::Parse to print the content of
+	DVI -- defines functions to print content of the DVI in
+	readable form.
 
 Installation:
 	Download the tar.gz, unpack it, change to the TeX-DVI-*
@@ -35,7 +35,7 @@ Use:
 	$dvi->preamble();
 	$dvi->begin_page();
 
-	use TeX::DVI::Parse;
+	use TeX::DVI::Print;
 	my $dvi_parse = new TeX::DVI::Print("test.dvi");
 	$dvi_parse->parse();
 
@@ -43,7 +43,7 @@ Available:
 	http://www.fi.muni.cz/~adelton/perl/ and from your favorite
 	CPAN site in the authors/id/JANPAZ/ directory.
 		
-Copyright: (c) 1996--1998 Jan Pazdziora, adelton@fi.muni.cz. All rights
+Copyright: (c) 1996--2001 Jan Pazdziora, adelton@fi.muni.cz. All rights
 	reserved. This module is free software; you can redistribute it
 	and/or modify it under the same terms as Perl itself. 
 
