Import of JANPAZ/TeX-DVI-1.01 from CPAN.
gitpan-cpan-distribution: TeX-DVI
gitpan-cpan-version:      1.01
gitpan-cpan-path:         JANPAZ/TeX-DVI-1.01.tar.gz
gitpan-cpan-author:       JANPAZ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 
 Changes for TeX::DVI and TeX::DVI::Parse:
 
+1.01 Thu Mar  3 22:21:27 CET 2011
+	Updating the upstream URL to
+	http://www.adelton.com/perl/TeX-DVI/
+
 0.110 Thu Dec  1 19:34:03 MET 2004
 	TeX::DVI::Parse: Added fix for negative values with put_rule,
 	set_rule, reported by Jerry Hagon.
