--- a/README
+++ b/README
@@ -40,10 +40,11 @@ Use:
 	$dvi_parse->parse();
 
 Available:
-	http://www.fi.muni.cz/~adelton/perl/ and from your favorite
+	http://www.adelton.com/perl/TeX-DVI/ and from your favorite
 	CPAN site in the authors/id/JANPAZ/ directory.
 		
-Copyright: (c) 1996--2001 Jan Pazdziora, adelton@fi.muni.cz. All rights
-	reserved. This module is free software; you can redistribute it
-	and/or modify it under the same terms as Perl itself. 
+Copyright: (c) 1996--2011 Jan Pazdziora.A
+	All rights reserved. This program is free software; you can
+	redistribute it and/or modify it under the same terms as Perl
+	itself. 
 
